--- a/system/pom.xml
+++ b/system/pom.xml
@@ -60,54 +60,73 @@
             <type>jar</type>
         </dependency>
     </dependencies>
-    
-     <build>
+        
+    <build>
         <plugins>
             <plugin>
-                <inherited>true</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <artifactId>
+                    maven-assembly-plugin
+                </artifactId>
                 <configuration>
-                    <encoding>UTF-8</encoding>
-                    <source>${java.compiler.version}</source>
-                    <target>${java.compiler.version}</target>
-                    <debug>true</debug>
-                    <optimize>true</optimize>
-                    <showDeprecations>true</showDeprecations>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.4</version>
-                <extensions>true</extensions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/src.xml</descriptor>
-                    </descriptors>
-                    <finalName>gvod</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                     <archive>
                         <manifest>
                             <mainClass>se.sics.gvod.system.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                        <phase>package</phase> <!-- append to the packaging phase. -->
-                        <goals>
-                            <goal>single</goal> <!-- goals == mojos -->
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
 </project>
+
+
+
+<!--old plugins-->
+<!--<plugin>
+    <inherited>true</inherited>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>2.3.2</version>
+    <configuration>
+        <encoding>UTF-8</encoding>
+        <source>${java.compiler.version}</source>
+        <target>${java.compiler.version}</target>
+        <debug>true</debug>
+        <optimize>true</optimize>
+        <showDeprecations>true</showDeprecations>
+    </configuration>
+</plugin>
+<plugin>
+    <groupId>org.apache.felix</groupId>
+    <artifactId>maven-bundle-plugin</artifactId>
+    <version>2.3.4</version>
+    <extensions>true</extensions>
+</plugin>
+<plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <version>2.2</version>
+    <configuration>
+        <descriptors>
+            <descriptor>src/main/assembly/src.xml</descriptor>
+        </descriptors>
+        <finalName>gvod</finalName>
+        <appendAssemblyId>false</appendAssemblyId>
+        <archive>
+            <manifest>
+                <mainClass>se.sics.gvod.system.Main</mainClass>
+            </manifest>
+        </archive>
+    </configuration>
+    <executions>
+        <execution>
+            <id>make-assembly</id>  this is used for inheritance merges 
+            <phase>package</phase>  append to the packaging phase. 
+            <goals>
+                <goal>single</goal>  goals == mojos 
+            </goals>
+        </execution>
+    </executions>
+</plugin>-->
