--- a/system/pom.xml
+++ b/system/pom.xml
@@ -69,6 +69,17 @@
             <version>${p2ptoolbox.util.version}</version>
             <type>jar</type>
         </dependency>
+         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.6</version>
+        </dependency>
     </dependencies>
         
     <build>
