--- a/core/core-impl/pom.xml
+++ b/core/core-impl/pom.xml
@@ -27,5 +27,11 @@
             <artifactId>croupier-fake</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
